fix: #2761 add temperature&topP to gemini provider setting

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -751,7 +751,7 @@
   "Web Search": "البحث في الإنترنت",
   "Webpage Published": "تم نشر صفحة الويب",
   "WeChat": "وي تشات",
-  "Welcome to Chatbox": "مرحباً بكم في Chatbox",
+  "Welcome to Chatbox": "مرحباً بكم في Chatbox AI",
   "What can I help you with today?": "كيف يمكنني مساعدتك اليوم؟",
   "Yes": "نعم",
   "You are already a Premium user": "أنت بالفعل مستخدم مميز",
