--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -753,7 +753,7 @@
   "Web Search": "Internetsuche",
   "Webpage Published": "Webseite veröffentlicht",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Willkommen bei Chatbox",
+  "Welcome to Chatbox": "Willkommen bei Chatbox AI",
   "What can I help you with today?": "Wie kann ich Ihnen heute helfen?",
   "Yes": "Ja",
   "You are already a Premium user": "Sie sind bereits ein Premium-Benutzer",
