--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -639,7 +639,7 @@
   "Web Search": "Web Search",
   "Webpage Published": "Webpage Published",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Welcome to Chatbox",
+  "Welcome to Chatbox": "Welcome to Chatbox AI",
   "What can I help you with today?": "What can I help you with today?",
   "You have multiple licenses. Please select one to use:": "You have multiple licenses. Please select one to use:",
   "You have no more Chatbox AI quota left this month.": "You have no more Chatbox AI quota left this month.",
