--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -751,7 +751,7 @@
   "Web Search": "Búsqueda en Internet",
   "Webpage Published": "Página web publicada",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Bienvenido a Chatbox",
+  "Welcome to Chatbox": "Bienvenido a Chatbox AI",
   "What can I help you with today?": "¿En qué puedo ayudarte hoy?",
   "Yes": "Sí",
   "You are already a Premium user": "Ya eres un usuario Premium",
