--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -752,7 +752,7 @@
   "Web Search": "Recherche Internet",
   "Webpage Published": "Page web publiée",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Bienvenue sur Chatbox",
+  "Welcome to Chatbox": "Bienvenue sur Chatbox AI",
   "What can I help you with today?": "Comment puis-je vous aider aujourd'hui?",
   "Yes": "Oui",
   "You are already a Premium user": "Vous êtes déjà un utilisateur Premium",
