--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -749,7 +749,7 @@
   "Web Search": "Ricerca su Internet",
   "Webpage Published": "Pagina web pubblicata",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Benvenuti su Chatbox",
+  "Welcome to Chatbox": "Benvenuti su Chatbox AI",
   "What can I help you with today?": "Come posso aiutarti oggi?",
   "Yes": "Sì",
   "You are already a Premium user": "Sei già un utente Premium",
