--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -752,7 +752,7 @@
   "Web Search": "インターネット検索",
   "Webpage Published": "ウェブページ公開済み",
   "WeChat": "WeChat (ウィーチャット)",
-  "Welcome to Chatbox": "Chatboxへようこそ",
+  "Welcome to Chatbox": "Chatbox AIへようこそ",
   "What can I help you with today?": "今日は何をお手伝いしましょうか？",
   "Yes": "はい",
   "You are already a Premium user": "あなたはすでにプレミアムユーザーです",
