--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -752,7 +752,7 @@
   "Web Search": "인터넷 검색",
   "Webpage Published": "웹페이지 게시됨",
   "WeChat": "위챗",
-  "Welcome to Chatbox": "Chatbox에 오신 것을 환영합니다",
+  "Welcome to Chatbox": "Chatbox AI에 오신 것을 환영합니다",
   "What can I help you with today?": "오늘 무엇을 도와드릴까요?",
   "Yes": "예",
   "You are already a Premium user": "이미 프리미엄 사용자입니다",
