--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -751,7 +751,7 @@
   "Web Search": "Internett-søk",
   "Webpage Published": "Nettside publisert",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Velkommen til Chatbox",
+  "Welcome to Chatbox": "Velkommen til Chatbox AI",
   "What can I help you with today?": "Hva kan jeg hjelpe deg med i dag?",
   "Yes": "Ja",
   "You are already a Premium user": "Du er allerede en Premium-bruker",
