--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -750,7 +750,7 @@
   "Web Search": "Pesquisa na Internet",
   "Webpage Published": "Página web publicada",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Bem-vindo ao Chatbox",
+  "Welcome to Chatbox": "Bem-vindo ao Chatbox AI",
   "What can I help you with today?": "Como posso ajudar hoje?",
   "Yes": "Sim",
   "You are already a Premium user": "Já é um utilizador Premium",
