--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -752,7 +752,7 @@
   "Web Search": "Поиск в Интернете",
   "Webpage Published": "Веб-страница опубликована",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Добро пожаловать в Chatbox",
+  "Welcome to Chatbox": "Добро пожаловать в Chatbox AI",
   "What can I help you with today?": "Чем я могу помочь вам сегодня?",
   "Yes": "Да",
   "You are already a Premium user": "Вы уже являетесь премиум-пользователем",
