--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -752,7 +752,7 @@
   "Web Search": "Internetsökning",
   "Webpage Published": "Webbsida publicerad",
   "WeChat": "WeChat",
-  "Welcome to Chatbox": "Välkommen till Chatbox",
+  "Welcome to Chatbox": "Välkommen till Chatbox AI",
   "What can I help you with today?": "Vad kan jag hjälpa dig med idag?",
   "Yes": "Ja",
   "You are already a Premium user": "Du är redan en Premium-användare",
