--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -764,7 +764,7 @@
   "Web Search": "联网搜索",
   "Webpage Published": "网页已发布",
   "WeChat": "微信",
-  "Welcome to Chatbox": "欢迎使用 Chatbox",
+  "Welcome to Chatbox": "欢迎使用 Chatbox AI",
   "What can I help you with today?": "今天我能为你提供什么帮助？",
   "Yes": "是",
   "You are already a Premium user": "你已经是专业版用户",
