--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -757,7 +757,7 @@
   "Web Search": "聯網搜索",
   "Webpage Published": "網頁已發佈",
   "WeChat": "微信",
-  "Welcome to Chatbox": "歡迎使用 Chatbox",
+  "Welcome to Chatbox": "歡迎使用 Chatbox AI",
   "What can I help you with today?": "今天我能幫助你什麼？",
   "Yes": "是",
   "You are already a Premium user": "你已經是高級版用戶",
