refactor: tweak quota display; extract shared components

--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "Falls Unterhaltungen in der Liste fehlen, verwenden Sie diese Funktion, um sie aus dem Speicher zu scannen und wiederherzustellen",
   "Image Creator": "Bilder-Ersteller",
   "Image Creator Intro": "Hallo! Ich bin Chatbox Image Creator, dein künstlerischer AI-Begleiter, der darauf spezialisiert ist, deine Worte in atemberaubende visuelle Darstellungen zu verwandeln. Wenn du es träumen kannst, kann ich es erschaffen - von verzauberten Landschaften, dynamischen Charakteren, App-Symbolen bis hin zum Abstrakten und darüber hinaus.\n\nIch bin ein ruhiger Roboter, gib mir einfach **die Beschreibung des Bildes, das du im Kopf hast**, und ich werde all meine Pixel darauf verwenden, deine Vision zu erschaffen.\n\nLass uns Kunst machen!",
+  "Image Quota": "Bildkontingent",
   "Image Style": "Bildstil",
   "Import and Restore": "Importieren und Wiederherstellen",
   "Import Error": "Importfehler",
@@ -489,6 +490,7 @@
   "Payment Type": "Zahlungsart",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Code...",
   "Pending": "Ausstehend",
+  "Plan Quota": "Tarif-Kontingent",
   "Platform Not Supported": "Plattform nicht unterstützt",
   "Please click the link below to complete login:": "Bitte klicken Sie auf den untenstehenden Link, um die Anmeldung abzuschließen:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Bitte schließen Sie die Anmeldung in Ihrem Browser ab. Wenn Sie nicht weitergeleitet werden, klicken Sie bitte auf den folgenden Link:",
@@ -733,6 +735,7 @@
   "version": "Version",
   "Video files are not supported": "Videodateien werden nicht unterstützt",
   "View All Copilots": "Alle Co-Piloten anzeigen",
+  "View Details": "Details ansehen",
   "View historical threads": "Historische Threads anzeigen",
   "View Message JSON": "Nachricht JSON anzeigen",
   "View More Plans": "Mehr Pläne ansehen",
