--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -282,6 +282,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "If conversations are missing from the list, use this feature to scan and recover them from storage",
   "Image Creator": "Image Creator",
   "Image Creator Intro": "Image Creator Intro",
+  "Image Quota": "Image Quota",
   "Image Style": "Image Style",
   "Import and Restore": "Import and Restore",
   "Import Error": "Import Error",
@@ -426,6 +427,7 @@
   "Payment Type": "Payment Type",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Code...",
   "Pending": "Pending",
+  "Plan Quota": "Plan Quota",
   "Platform Not Supported": "Platform Not Supported",
   "Please click the link below to complete login:": "Please click the link below to complete login:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Please complete login in your browser. If you are not redirected, please click the link below:",
@@ -623,6 +625,7 @@
   "User Terms": "User Terms",
   "Video files are not supported": "Video files are not supported",
   "View All Copilots": "View All Copilots",
+  "View Details": "View Details",
   "View Message JSON": "View Message JSON",
   "View More Plans": "View More Plans",
   "View Session JSON": "View Session JSON",
