--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "Si faltan conversaciones en la lista, utiliza esta función para escanearlas y recuperarlas del almacenamiento",
   "Image Creator": "Creador de imágenes",
   "Image Creator Intro": "¡Hola! Soy el Creador de Imágenes de Chatbox, tu compañero artístico de IA dedicado a convertir tus palabras en impresionantes imágenes. Si puedes imaginarlo, yo puedo crearlo: desde paisajes encantadores, personajes dinámicos, iconos de aplicaciones hasta lo abstracto y más allá.\n\nSoy un robot silencioso, **simplemente dime la descripción de la imagen que tienes en mente**, y concentraré todos mis píxeles en dar vida a tu visión.\n\n¡Hagamos arte!",
+  "Image Quota": "Cuota de imagen",
   "Image Style": "Estilo de imagen",
   "Import and Restore": "Importar y restaurar",
   "Import Error": "Error de importación",
@@ -489,6 +490,7 @@
   "Payment Type": "Tipo de pago",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Código...",
   "Pending": "Pendiente",
+  "Plan Quota": "Cuota del Plan",
   "Platform Not Supported": "Plataforma no compatible",
   "Please click the link below to complete login:": "Por favor, haga clic en el enlace de abajo para completar el inicio de sesión:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Por favor, completa el inicio de sesión en tu navegador. Si no se te redirige, haz clic en el enlace de abajo:",
@@ -732,6 +734,7 @@
   "version": "Versión",
   "Video files are not supported": "Los archivos de vídeo no son compatibles",
   "View All Copilots": "Ver todos los copilotos",
+  "View Details": "Ver detalles",
   "View historical threads": "Ver hilos históricos",
   "View Message JSON": "Ver Mensaje JSON",
   "View More Plans": "Ver más planes",
