--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "Si des conversations manquent dans la liste, utilisez cette fonctionnalité pour les scanner et les récupérer depuis le stockage",
   "Image Creator": "Créateur d'images",
   "Image Creator Intro": "Bonjour ! Je suis Chatbox Image Creator, votre compagnon artistique IA dédié à transformer vos paroles en visuels frappants. Si vous pouvez le rêver, je peux le créer — des paysages enchanteurs, des personnages dynamiques, des icônes d'application jusqu'à l'abstrait et au-delà.\n\nJe suis un robot silencieux, il suffit **de me dire simplement la description de l'image que vous avez en tête**, et je concentrerai tous mes pixels pour concrétiser votre vision.\n\nFaisons de l'art !",
+  "Image Quota": "Quota d'images",
   "Image Style": "Style d'Image",
   "Import and Restore": "Importer et restaurer",
   "Import Error": "Erreur d'importation",
@@ -489,6 +490,7 @@
   "Payment Type": "Type de paiement",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Code...",
   "Pending": "En attente",
+  "Plan Quota": "Quota du forfait",
   "Platform Not Supported": "Plateforme non prise en charge",
   "Please click the link below to complete login:": "Veuillez cliquer sur le lien ci-dessous pour finaliser la connexion :",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Veuillez vous connecter dans votre navigateur. Si vous n'êtes pas redirigé, veuillez cliquer sur le lien ci-dessous :",
@@ -733,6 +735,7 @@
   "version": "Version",
   "Video files are not supported": "Fichiers vidéo non pris en charge",
   "View All Copilots": "Voir tous les copilotes",
+  "View Details": "Voir les détails",
   "View historical threads": "Voir les sujets historiques",
   "View Message JSON": "Voir le JSON du message",
   "View More Plans": "Voir plus de plans",
