--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -335,6 +335,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "Se mancano conversazioni dall'elenco, utilizza questa funzione per scansionarle e recuperarle dall'archivio",
   "Image Creator": "Creatore Immagini",
   "Image Creator Intro": "Ciao! Sono Chatbox Image Creator, il tuo compagno artistico AI dedicato a trasformare le tue parole in immagini sorprendenti. Se puoi sognarlo, io posso crearlo—da paesaggi incantevoli, personaggi dinamici, icone di app fino all'astratto e oltre.\n\nSono un robot silenzioso, **basta che tu mi dica la descrizione dell'immagine che hai in mente**, e concentrerò tutti i miei pixel per realizzare la tua visione.\n\nFacciamo arte!",
+  "Image Quota": "Quota Immagine",
   "Image Style": "Stile dell'immagine",
   "Import and Restore": "Importa e ripristina",
   "Import Error": "Errore di importazione",
@@ -488,6 +489,7 @@
   "Payment Type": "Tipo di pagamento",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Codice...",
   "Pending": "In sospeso",
+  "Plan Quota": "Quota del piano",
   "Platform Not Supported": "Piattaforma non supportata",
   "Please click the link below to complete login:": "Clicca il link qui sotto per completare l'accesso:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Completa l'accesso nel tuo browser. Se non vieni reindirizzato, clicca sul link qui sotto:",
@@ -730,6 +732,7 @@
   "version": "Versione",
   "Video files are not supported": "File video non supportati",
   "View All Copilots": "Visualizza tutti i Copilot",
+  "View Details": "Vista Dettagli",
   "View historical threads": "Visualizza thread storici",
   "View Message JSON": "Visualizza JSON messaggio",
   "View More Plans": "Visualizza altri piani",
