--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "リストに会話が見つからない場合は、この機能を使ってストレージからスキャンし、復元してください",
   "Image Creator": "画像生成",
   "Image Creator Intro": "こんにちは！私はChatbox Image Creator、あなたのアーティスティックなAIコンパニオンです。あなたの言葉を魅力的なビジュアルに変えることに特化しています。あなたが夢見ることができれば、私が創造できますー魅惑的な風景、ダイナミックなキャラクター、アプリアイコンから抽象的なものまで。\n\n私は静かなロボットです、だから**単にあなたが心に描くイメージの説明を教えてください**、そして私は私の全ピクセルを集中してあなたのビジョンを形作ります。\n\nアートを作りましょう！",
+  "Image Quota": "画像クォータ",
   "Image Style": "画像スタイル",
   "Import and Restore": "インポートと復元",
   "Import Error": "インポートエラー",
@@ -489,6 +490,7 @@
   "Payment Type": "支払方法",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF、DOC、PPT、XLS、TXT、Code...",
   "Pending": "保留中",
+  "Plan Quota": "プランクォータ",
   "Platform Not Supported": "プラットフォームはサポートされていません",
   "Please click the link below to complete login:": "以下のリンクをクリックして、ログインを完了してください。",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "ブラウザでログインを完了してください。リダイレクトされない場合は、下記のリンクをクリックしてください:",
@@ -733,6 +735,7 @@
   "version": "バージョン",
   "Video files are not supported": "動画ファイルはサポートされていません",
   "View All Copilots": "すべてのコパイロットを表示",
+  "View Details": "詳細を見る",
   "View historical threads": "過去のスレッドを表示",
   "View Message JSON": "メッセージ JSON を表示",
   "View More Plans": "プランをもっと見る",
