--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "목록에서 대화가 누락된 경우, 이 기능을 사용하여 저장소에서 대화를 스캔하고 복구할 수 있습니다",
   "Image Creator": "이미지 생성기",
   "Image Creator Intro": "안녕하세요! 저는 Chatbox Image Creator, 당신의 말을 환상적인 시각 이미지로 바꿔드리는 예술적 AI 동반자입니다. 상상할 수 있다면 저는 그것을 만들 수 있습니다—매혹적인 풍경, 역동적인 캐릭터, 앱 아이콘, 또는 추상적인 개념까지.\n\n저는 조용한 로봇이니, **그저 마음에 떠오르는 이미지에 대한 설명을 말해주세요**, 그러면 저는 모든 픽셀을 집중하여 당신의 비전을 현실로 만들겠습니다.\n\n자, 예술을 만들어 봅시다!",
+  "Image Quota": "이미지 할당량",
   "Image Style": "이미지 스타일",
   "Import and Restore": "가져오기 및 복원",
   "Import Error": "가져오기 오류",
@@ -489,6 +490,7 @@
   "Payment Type": "결제 방식",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, 코드...",
   "Pending": "대기 중",
+  "Plan Quota": "요금제 쿼터",
   "Platform Not Supported": "플랫폼 미지원",
   "Please click the link below to complete login:": "로그인을 완료하려면 아래 링크를 클릭해주세요.",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "브라우저에서 로그인을 완료해주세요. 자동으로 리디렉션되지 않으면 아래 링크를 클릭해주세요:",
@@ -733,6 +735,7 @@
   "version": "버전",
   "Video files are not supported": "동영상 파일은 지원되지 않습니다",
   "View All Copilots": "모든 동반자 보기",
+  "View Details": "자세히 보기",
   "View historical threads": "과거 스레드 보기",
   "View Message JSON": "메시지 JSON 보기",
   "View More Plans": "더 많은 플랜 보기",
