--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "Hvis samtaler mangler fra listen, bruk denne funksjonen til å skanne og gjenopprette dem fra lagring.",
   "Image Creator": "Bildeskaper",
   "Image Creator Intro": "Hei! Jeg er Chatbox Image Creator, din kunstneriske AI-følgesvenn som er dedikert til å gjøre om ordene dine til slående visuelle uttrykk. Hvis du kan drømme det, kan jeg skape det—fra fortryllende landskap og dynamiske karakterer til app-ikoner og det abstrakte.\n\nJeg er en stille robot, bare **fortell meg beskrivelsen av bildet du har i tankene**, og jeg vil fokusere alle pikslene mine på å forme din visjon.\n\nLa oss skape kunst!",
+  "Image Quota": "Bildekvote",
   "Image Style": "Bildestil",
   "Import and Restore": "Importer og gjenopprett",
   "Import Error": "Importfeil",
@@ -489,6 +490,7 @@
   "Payment Type": "Betalingstype",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Kode...",
   "Pending": "Ventende",
+  "Plan Quota": "Plankvote",
   "Platform Not Supported": "Plattform ikke støttet",
   "Please click the link below to complete login:": "Vennligst klikk lenken nedenfor for å fullføre innloggingen:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Vennligst fullfør påloggingen i nettleseren din. Hvis du ikke blir omdirigert, vennligst klikk lenken nedenfor:",
@@ -732,6 +734,7 @@
   "version": "Versjon",
   "Video files are not supported": "Videofiler støttes ikke",
   "View All Copilots": "Vis alle Copilots",
+  "View Details": "Vis detaljer",
   "View historical threads": "Vis historiske tråder",
   "View Message JSON": "Vis meldings-JSON",
   "View More Plans": "Se flere abonnementer",
