--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -335,6 +335,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "Se as conversas estiverem em falta na lista, utilize esta funcionalidade para as procurar e recuperar do armazenamento",
   "Image Creator": "Criador de Imagens",
   "Image Creator Intro": "Olá! Eu sou o Criador de Imagens Chatbox, a 'máquina impiedosa' de fazer imagens. Posso criar belas imagens com base na tua descrição, desde paisagens encantadoras até personagens vívidos, ícones de apps ou conceitos abstratos... (๑•́ ₃ •̀๑) Eh... sou um pouco introvertido, por isso **por favor, diz-me diretamente o que desejas visualizar**, e eu vou concentrar todos os meus pixels para realizar a tua imaginação. Agora, deixa a tua imaginação voar!",
+  "Image Quota": "Quota de Imagem",
   "Image Style": "Estilo da Imagem",
   "Import and Restore": "Importar e Restaurar",
   "Import Error": "Erro de Importação",
@@ -488,6 +489,7 @@
   "Payment Type": "Tipo de Pagamento",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Código...",
   "Pending": "Pendente",
+  "Plan Quota": "Quota do Plano",
   "Platform Not Supported": "Plataforma Não Suportada",
   "Please click the link below to complete login:": "Clique no link abaixo para concluir o início de sessão:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Por favor, conclua o início de sessão no seu navegador. Se não for redirecionado, por favor, clique na ligação abaixo:",
@@ -731,6 +733,7 @@
   "version": "Versão",
   "Video files are not supported": "Ficheiros de vídeo não são suportados",
   "View All Copilots": "Ver Todos os Copilotos",
+  "View Details": "Detalhes",
   "View historical threads": "Ver tópicos históricos",
   "View Message JSON": "Ver Mensagem JSON",
   "View More Plans": "Ver Mais Planos",
