--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "Если беседы отсутствуют в списке, воспользуйтесь этой функцией для сканирования и восстановления их из хранилища.",
   "Image Creator": "Создатель изображений",
   "Image Creator Intro": "Привет! Я Chatbox Image Creator, ваш художественный AI-соратник, предан созданию поразительных визуальных образов из ваших слов. Если вы можете это мечтать, я могу это создать — от очаровывающих пейзажей, динамичных персонажей, значков приложений до абстракции и за её пределы.\n\nЯ тихий робот, просто **скажите мне описание изображения, которое у вас в голове**, и я сосредоточу все мои пиксели на воплощении вашего видения.\n\nДавайте творить искусство!",
+  "Image Quota": "Квота изображений",
   "Image Style": "Стиль изображения",
   "Import and Restore": "Импорт и восстановление",
   "Import Error": "Ошибка импорта",
@@ -489,6 +490,7 @@
   "Payment Type": "Тип оплаты",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Код...",
   "Pending": "Ожидание",
+  "Plan Quota": "Квота плана",
   "Platform Not Supported": "Платформа не поддерживается",
   "Please click the link below to complete login:": "Нажмите ссылку ниже, чтобы завершить вход:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Пожалуйста, завершите вход в вашем браузере. Если вас не перенаправит, пожалуйста, нажмите на ссылку ниже:",
@@ -733,6 +735,7 @@
   "version": "Версия",
   "Video files are not supported": "Видеофайлы не поддерживаются",
   "View All Copilots": "Просмотреть всех Copilots",
+  "View Details": "Посмотреть детали",
   "View historical threads": "Просмотреть историю тем",
   "View Message JSON": "Просмотреть JSON сообщения",
   "View More Plans": "Просмотреть больше планов",
