--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "Om konversationer saknas från listan, använd denna funktion för att söka igenom och återställa dem från lagring",
   "Image Creator": "Bildskapare",
   "Image Creator Intro": "Hej! Jag är Chatbox Bildskapare, din konstnärliga AI-följeslagare som omvandlar dina ord till slående bilder. Om du kan drömma det kan jag skapa det - från förtrollande landskap och dynamiska karaktärer till app-ikoner och bortom det abstrakta.\n\nJag är en tyst robot, **berätta bara för mig hur bilden du har i åtanke ser ut**, så fokuserar jag alla mina pixlar på att förverkliga din vision.\n\nLåt oss skapa konst!",
+  "Image Quota": "Bildkvota",
   "Image Style": "Bildstil",
   "Import and Restore": "Importera och återställ",
   "Import Error": "Importfel",
@@ -489,6 +490,7 @@
   "Payment Type": "Betalningsmetod",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Kod...",
   "Pending": "Väntande",
+  "Plan Quota": "Plankvot",
   "Platform Not Supported": "Plattform stöds inte",
   "Please click the link below to complete login:": "Klicka på länken nedan för att slutföra inloggningen:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Vänligen slutför inloggningen i din webbläsare. Om du inte omdirigeras, klicka på länken nedan:",
@@ -733,6 +735,7 @@
   "version": "Version",
   "Video files are not supported": "Videofiler stöds inte",
   "View All Copilots": "Visa alla Copilots",
+  "View Details": "Visa detaljer",
   "View historical threads": "Visa trådhistorik",
   "View Message JSON": "Visa meddelande JSON",
   "View More Plans": "Visa fler abonnemang",
