--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "如果对话列表中缺少对话，可以使用此功能从存储中扫描并恢复它们",
   "Image Creator": "图片创建器",
   "Image Creator Intro": "Hi！我是 Chatbox Image Creator，“无情”的图片制造机。我可以根据你的描述生成精美图片，只要你能想象得到，我就能创造出来——迷人的风景、生动的角色、App 图标、或者抽象的构思……\n\n(๑•́ ₃ •̀๑) 额…我是一个有点自闭的机器人，所以**请直接告诉我你想要图片的文字描述**，我会集中我所有的像素去实现你的想象。\n\n现在请发挥你的想象力吧！",
+  "Image Quota": "图片配额",
   "Image Style": "图片风格",
   "Import and Restore": "导入与恢复",
   "Import Error": "导入错误",
@@ -494,6 +495,7 @@
   "Payment Type": "支付类型",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, 代码...",
   "Pending": "待处理",
+  "Plan Quota": "套餐配额",
   "Platform Not Supported": "平台不支持",
   "Please click the link below to complete login:": "请点击下方链接完成登录：",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "请在浏览器中完成登录。如果您没有被重定向，请点击下方链接：",
@@ -744,6 +746,7 @@
   "version": "版本",
   "Video files are not supported": "视频文件不支持",
   "View All Copilots": "查看所有搭档",
+  "View Details": "查看详情",
   "View historical threads": "查看历史话题",
   "View Message JSON": "查看消息 JSON",
   "View More Plans": "查看更多方案",
