--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "إذا كانت المحادثات مفقودة من القائمة، استخدم هذه الميزة لمسحها واستعادتها من التخزين",
   "Image Creator": "مُنشِئ الصور",
   "Image Creator Intro": "مرحبًا! أنا منشئ الصور في Chatbox، رفيقك الفني المدعوم بالذكاء الاصطناعي المكرس لتحويل كلماتك إلى صور مذهلة. إذا كنت تستطيع أن تحلم بها، يمكنني أن أخلقها - من المناظر الطبيعية الساحرة، الشخصيات الديناميكية، رموز التطبيقات إلى التجريد وما وراءه.\n\nأنا روبوت هادئ، فقط **أخبرني ببساطة بوصف الصورة التي في ذهنك**، وسأركز كل وحدات البكسل الخاصة بي على إنشاء رؤيتك.\n\nلنصنع الفن!",
+  "Image Quota": "حصة الصور",
   "Image Style": "نمط الصورة",
   "Import and Restore": "استيراد واستعادة",
   "Import Error": "خطأ في الاستيراد",
@@ -489,6 +490,7 @@
   "Payment Type": "نوع الدفع",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, رمز...",
   "Pending": "معلق",
+  "Plan Quota": "حصة الخطة",
   "Platform Not Supported": "المنصة غير مدعومة",
   "Please click the link below to complete login:": "الرجاء النقر على الرابط أدناه لإكمال تسجيل الدخول:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "الرجاء إكمال تسجيل الدخول في متصفحك. إذا لم يتم توجيهك، الرجاء النقر على الرابط أدناه:",
@@ -732,6 +734,7 @@
   "version": "الإصدار",
   "Video files are not supported": "ملفات الفيديو غير مدعومة",
   "View All Copilots": "عرض جميع مساعدي الطيارين",
+  "View Details": "عرض التفاصيل",
   "View historical threads": "عرض المحادثات التاريخية",
   "View Message JSON": "عرض رسالة JSON",
   "View More Plans": "عرض المزيد من الخطط",
