--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -336,6 +336,7 @@
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "如果對話從列表中遺失，請使用此功能來掃描並從儲存空間中復原它們",
   "Image Creator": "圖片產生器",
   "Image Creator Intro": "Hi！我是 Chatbox Image Creator，圖片製造機。我可以根據你的描述生成精美圖片，只要你能想像得到，我就能創造出來——迷人的風景、生動的角色、App 圖示、或者抽象的構思……\n\n(๑•́ ₃ •̀๑) 呃…我是一個有點自閉的機器人，所以**請直接告訴我你想要圖片的文字描述**，我會集中我所有的像素去實現你的想像。\n\n現在請發揮你的想像力吧！",
+  "Image Quota": "圖片配額",
   "Image Style": "圖片風格",
   "Import and Restore": "匯入與恢復",
   "Import Error": "匯入錯誤",
@@ -494,6 +495,7 @@
   "Payment Type": "付款類型",
   "PDF, DOC, PPT, XLS, TXT, Code...": "PDF, DOC, PPT, XLS, TXT, Code...",
   "Pending": "待處理",
+  "Plan Quota": "套餐配額",
   "Platform Not Supported": "不支援此平台",
   "Please click the link below to complete login:": "請點擊以下連結以完成登入：",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "請在您的瀏覽器中完成登入。如果您沒有被重新導向，請點擊下方連結：",
@@ -738,6 +740,7 @@
   "version": "版本",
   "Video files are not supported": "不支援影片檔案",
   "View All Copilots": "查看所有搭檔",
+  "View Details": "查看詳情",
   "View historical threads": "查看歷史話題",
   "View Message JSON": "檢視訊息 JSON",
   "View More Plans": "瀏覽更多方案",
